<resources>
    <string name="app_name">morseApp-v6.10</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="start_half_duplex">开启半双工通信</string>
    <string name="snr">信噪比</string>
    <string name="output3">短码</string>
    <string name="output12">码速/wpm</string>
    <string name="output11">码速/wpm</string>
    <string name="output10">CRC</string>
    <string name="output9">组数</string>
    <string name="output8">号数</string>
    <string name="output4">目标设备号</string>
    <string name="output2">长码</string>
    <string name="shortCode_input">请输入短码内容</string>
    <string name="longCode_speed_input">请输入码速</string>
    <string name="CRC_input">请输入CRC</string>
    <string name="GNum_input">请输入组数</string>
    <string name="Gid_input">请输入号数</string>
    <string name="deviceId_input">请输入设备号</string>
    <string name="shortCode_speed_input">请输入码速</string>
    <string name="send_button_text">发送报文</string>
    <string name="half_duplex_button">半双工通信</string>
    <string name="input_text">请输入英文字符</string>
    <string name="audio_button">编码并播放音频</string>
    <string name="switch_to_socket">点击切换\n到Socket通信</string>
    <string name="char_to_morse_button">字符转摩尔斯码</string>
    <string name="switch_to_shortCode_button">长码编码\n(点击切换)</string>
    <string name="switch_to_record">点击切换\n到录音</string>
    <string name="switch_to_longCode_button">短码编码\n(点击切换)</string>
    <string name="wpmButton_30">30wpm</string>
    <string name="wpmButton_25">25wpm</string>
    <string name="wpmButton_20">20wpm</string>
    <string name="wpmButton_15">15wpm</string>
    <string name="wpmButton_35">35wpm</string>
    <string name="wpmButton_40">40wpm</string>
    <string name="wpmButton_45">45wpm</string>
    <string name="wpmButton_50">50wpm</string>
    <string name="et_ip">请输入IP</string>
    <string name="send_shortWave">发送短码音频</string>
    <string name="send_longWave">发送长码音频</string>
    <string name="serverReturn">服务器返回内容</string>
    <string name="bt_settings">保存设置</string>
    <string name="et_port">请输入端口号</string>
    <string name="et_deviceId">请输入设备ID</string>
    <string name="level">请输入传输等级</string>
    <string name="mmdd">请输入月日</string>
    <string name="hhmm">请输入时分</string>
    <string name="other">请输入附注</string>
    <string name="output13">传输等级</string>
    <string name="output14">月日</string>
    <string name="output15">时分</string>
    <string name="output16">附注</string>
    <string name="et_expiredTime">单位：s</string>
    <string name="preamble_num">范围：1~10</string>
    <string name="isPlayAudioButton">是否播放音频</string>
    <string name="isSelfAdaption">开启自动降低码速</string>
</resources>