<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="match_parent"
    android:background="@color/back_color"
    tools:context=".pages.ShortCoder">


    <RadioGroup
        android:id="@+id/pcmRadioGroup2"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_marginTop="5dp"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/char_to_morse_button">

        <RadioButton
            android:id="@+id/wpmButton_35"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:buttonTint="#F4606C"
            android:text="@string/wpmButton_35"
            android:textColor="@color/design_default_color_primary_dark"
            android:textSize="15sp" />

        <RadioButton
            android:id="@+id/wpmButton_40"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:buttonTint="#F4606C"
            android:text="@string/wpmButton_40"
            android:textColor="@color/design_default_color_primary_dark"

            android:textSize="15sp" />

        <RadioButton
            android:id="@+id/wpmButton_45"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:buttonTint="#F4606C"
            android:text="@string/wpmButton_45"
            android:textColor="@color/design_default_color_primary_dark"
            android:textSize="15sp" />

        <RadioButton
            android:id="@+id/wpmButton_50"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:buttonTint="#F4606C"
            android:text="@string/wpmButton_50"
            android:textColor="@color/design_default_color_primary_dark"
            android:textSize="15sp" />
    </RadioGroup>

    <RadioGroup
        android:id="@+id/pcmRadioGroup1"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:checkedButton="@id/wpmButton_15"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/pcmRadioGroup2">

        <RadioButton
            android:id="@+id/wpmButton_15"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:buttonTint="#F4606C"
            android:text="@string/wpmButton_15"
            android:textColor="@color/design_default_color_primary_dark"
            android:textSize="15sp" />

        <RadioButton
            android:id="@+id/wpmButton_20"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:buttonTint="#F4606C"
            android:text="@string/wpmButton_20"
            android:textColor="@color/design_default_color_primary_dark"

            android:textSize="15sp" />

        <RadioButton
            android:id="@+id/wpmButton_25"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:buttonTint="#F4606C"
            android:text="@string/wpmButton_25"
            android:textColor="@color/design_default_color_primary_dark"
            android:textSize="15sp" />

        <RadioButton
            android:id="@+id/wpmButton_30"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:buttonTint="#F4606C"
            android:text="@string/wpmButton_30"
            android:textColor="@color/design_default_color_primary_dark"
            android:textSize="15sp" />
    </RadioGroup>


    <TextView
        android:id="@+id/output"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginTop="100dp"
        android:layout_marginEnd="50dp"
        android:background="@drawable/translucent"
        android:enabled="true"
        android:focusable="true"
        android:gravity="center"
        android:longClickable="true"
        android:text=""
        android:textIsSelectable="true"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="SpeakableTextPresentCheck" />

    <Button
        android:id="@+id/button_switch_record"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:minWidth="0dp"
        android:minHeight="0dp"
        android:text="@string/switch_to_record"
        android:textSize="12sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/switch_to_longCode_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="30dp"
        android:minWidth="0dp"
        android:minHeight="0dp"
        android:text="@string/switch_to_longCode_button"
        android:textSize="12sp"
        app:layout_constraintEnd_toStartOf="@+id/switch_to_socket_button"
        app:layout_constraintStart_toEndOf="@+id/button_switch_record"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/switch_to_socket_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:minWidth="0dp"
        android:minHeight="0dp"
        android:text="@string/switch_to_socket"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <EditText
        android:id="@+id/input_text"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="50dp"
        android:background="@drawable/translucent"
        android:ems="10"
        android:gravity="center"
        android:hint="请输入数字字符"
        android:autofillHints="请输入数字字符"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        android:textCursorDrawable="@drawable/edittext_cursor"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/output"
        tools:ignore="TouchTargetSizeCheck" />



    <Button
        android:id="@+id/char_to_morse_button"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/char_to_morse_button"
        android:layout_marginTop="5dp"
        app:layout_constraintEnd_toStartOf="@+id/audio_button"
        app:layout_constraintHeight_percent="0.07"
        app:layout_constraintWidth_percent="0.4"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/input_text" />

    <Button
        android:id="@+id/audio_button"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/audio_button"
        android:layout_marginTop="5dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent="0.07"
        app:layout_constraintWidth_percent="0.4"
        app:layout_constraintStart_toEndOf="@+id/char_to_morse_button"
        app:layout_constraintTop_toBottomOf="@+id/input_text" />

    <TextView
        android:id="@+id/snr1"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="5dp"
        android:layout_marginStart="10dp"
        android:background="@drawable/translucent_background"
        android:enabled="true"
        android:focusable="true"
        android:gravity="center"
        android:longClickable="true"
        android:text="信噪比"
        android:textIsSelectable="true"
        android:textSize="13sp"
        android:textStyle="bold"
        android:textColor="@color/text_color"
        app:layout_constraintHeight_percent="0.06"
        app:layout_constraintWidth_percent="0.4"
        app:layout_constraintEnd_toStartOf="@+id/snr_spinner1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/pcmRadioGroup1" />

    <Spinner
        android:id="@+id/snr_spinner1"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="10dp"
        android:background="@drawable/spinner_background"
        android:popupBackground="@drawable/translucent"
        android:textStyle="bold"
        android:spinnerMode="dropdown"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.85"
        app:layout_constraintHeight_percent="0.06"
        app:layout_constraintWidth_percent="0.40"
        app:layout_constraintStart_toEndOf="@+id/snr1"
        app:layout_constraintTop_toBottomOf="@+id/pcmRadioGroup1"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/half_duplex_button"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/half_duplex_button"
        app:layout_constraintHeight_percent="0.07"
        app:layout_constraintWidth_percent="0.4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/snr1" />

</androidx.constraintlayout.widget.ConstraintLayout>