<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/back_color"
        tools:context=".pages.ShortCoder">

        <EditText
            android:id="@+id/shortCode_speed_input"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginTop="5dp"
            android:background="@drawable/translucent"
            android:ems="10"
            android:gravity="center"
            android:hint="@string/shortCode_speed_input"
            android:text="35"
            android:autofillHints="@string/shortCode_speed_input"
            android:inputType="textPersonName"
            android:textCursorDrawable="@drawable/edittext_cursor"
            android:textSize="15sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHeight_percent="0.03"
            app:layout_constraintHorizontal_bias="0.85"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/shortCode_input"
            app:layout_constraintWidth_percent="0.40"
            tools:ignore="TouchTargetSizeCheck" />

        <EditText
            android:id="@+id/deviceId_input"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:background="@drawable/translucent"
            android:ems="10"
            android:gravity="center"
            android:hint="@string/deviceId_input"
            android:autofillHints="@string/deviceId_input"
            android:inputType="textPersonName"
            android:textCursorDrawable="@drawable/edittext_cursor"
            android:textSize="15sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHeight_percent="0.03"
            app:layout_constraintHorizontal_bias="0.85"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/output4"
            app:layout_constraintWidth_percent="0.35"
            tools:ignore="TouchTargetSizeCheck" />

        <EditText
            android:id="@+id/Len_input"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginTop="5dp"
            android:background="@drawable/translucent"
            android:ems="10"
            android:gravity="center"
            android:hint="@string/Len_input"
            android:autofillHints="@string/Len_input"
            android:inputType="textPersonName"
            android:textCursorDrawable="@drawable/edittext_cursor"
            android:textSize="15sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHeight_percent="0.03"
            app:layout_constraintHorizontal_bias="0.85"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/deviceId_input"
            app:layout_constraintWidth_percent="0.35"
            tools:ignore="TouchTargetSizeCheck" />


        <EditText
            android:id="@+id/longCode_speed_input"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginTop="5dp"
            android:background="@drawable/translucent"
            android:ems="10"
            android:gravity="center"
            android:hint="@string/longCode_speed_input"
            android:text="25"
            android:autofillHints="@string/longCode_speed_input"
            android:inputType="textPersonName"
            android:textCursorDrawable="@drawable/edittext_cursor"
            android:textSize="15sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHeight_percent="0.03"
            app:layout_constraintHorizontal_bias="0.85"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/other"
            app:layout_constraintWidth_percent="0.35"
            tools:ignore="TouchTargetSizeCheck" />



        <EditText
            android:id="@+id/other"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginTop="5dp"
            android:background="@drawable/translucent"
            android:ems="10"
            android:gravity="center"
            android:hint="@string/other"
            android:autofillHints="@string/other"
            android:inputType="textPersonName"
            android:textCursorDrawable="@drawable/edittext_cursor"
            android:textSize="15sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHeight_percent="0.03"
            app:layout_constraintHorizontal_bias="0.85"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/Len_input"
            app:layout_constraintWidth_percent="0.35"
            tools:ignore="TouchTargetSizeCheck" />

        <EditText
            android:id="@+id/shortCode_input"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginTop="4dp"
            android:layout_marginEnd="16dp"
            android:background="@drawable/translucent"
            android:ems="10"
            android:gravity="start|top"
            android:hint="@string/shortCode_input"
            android:inputType="textMultiLine"
            android:scrollbars="vertical"
            android:scrollHorizontally="false"
            android:textSize="15sp"
            android:text="0000 1111 2222 3333 4444 5555 6666 7777 8888 9999"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHeight_default="percent"
            app:layout_constraintHeight_percent="0.2"
            app:layout_constraintWidth_percent="0.65"
            app:layout_constraintHorizontal_bias="0.8"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/longCode_speed_input"
            tools:ignore="TouchTargetSizeCheck" />


        <TextView
            android:id="@+id/output1"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:background="@drawable/translucent"
            android:enabled="true"
            android:fadeScrollbars="false"
            android:gravity="start"
            android:longClickable="true"
            android:scrollbars="vertical"
            android:singleLine="false"
            android:text=""
            android:textColor="@color/text_color"
            android:textSize="14sp"
            android:textStyle="bold"
            app:layout_constraintDimensionRatio="2.5:1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHeight_default="percent"
            app:layout_constraintHeight_percent="0.1"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/start_half_duplex"
            tools:ignore="TouchTargetSizeCheck" />

        <TextView
            android:id="@+id/output2"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_marginStart="40dp"
            android:layout_marginEnd="5dp"
            android:background="@drawable/translucent_background"
            android:enabled="true"
            android:focusable="true"
            android:gravity="center"
            android:longClickable="true"
            android:text="@string/output2"
            android:textIsSelectable="true"
            android:textSize="15sp"
            android:textStyle="bold"
            android:textColor="@color/text_color"
            app:layout_constraintBottom_toBottomOf="@+id/output7"
            app:layout_constraintEnd_toStartOf="@+id/output4"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/output4"
            tools:ignore="SpeakableTextPresentCheck" />


        <TextView
            android:id="@+id/output4"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:background="@drawable/translucent_background"
            android:enabled="true"
            android:focusable="true"
            android:gravity="center"
            android:longClickable="true"
            android:text="@string/output4"
            android:textColor="@color/text_color"
            android:textSize="15sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHeight_percent="0.03"
            app:layout_constraintHorizontal_bias="0.35"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.149"
            app:layout_constraintWidth_percent="0.3"
            tools:ignore="TouchTargetSizeCheck" />

        <TextView
            android:id="@+id/output5"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginTop="5dp"
            android:background="@drawable/translucent_background"
            android:enabled="true"
            android:focusable="true"
            android:gravity="center"
            android:longClickable="true"
            android:text="@string/output5"
            android:textIsSelectable="true"
            android:textSize="15sp"
            android:textStyle="bold"
            android:textColor="@color/text_color"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHeight_percent="0.03"
            app:layout_constraintHorizontal_bias="0.35"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/output4"
            app:layout_constraintVertical_bias="0.0"
            app:layout_constraintWidth_percent="0.3"
            tools:ignore="TouchTargetSizeCheck" />


        <TextView
            android:id="@+id/output7"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginTop="5dp"
            android:background="@drawable/translucent_background"
            android:enabled="true"
            android:focusable="true"
            android:gravity="center"
            android:longClickable="true"
            android:text="@string/output7"
            android:textIsSelectable="true"
            android:textSize="15sp"
            android:textStyle="bold"
            android:textColor="@color/text_color"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHeight_percent="0.03"
            app:layout_constraintHorizontal_bias="0.35"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/output6"
            app:layout_constraintVertical_bias="0.0"
            app:layout_constraintWidth_percent="0.3"
            tools:ignore="TouchTargetSizeCheck" />


        <TextView
            android:id="@+id/output6"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginTop="5dp"
            android:background="@drawable/translucent_background"
            android:enabled="true"
            android:focusable="true"
            android:gravity="center"
            android:longClickable="true"
            android:text="@string/output6"
            android:textIsSelectable="true"
            android:textSize="15sp"
            android:textStyle="bold"
            android:textColor="@color/text_color"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHeight_percent="0.03"
            app:layout_constraintHorizontal_bias="0.35"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/output5"
            app:layout_constraintVertical_bias="0.0"
            app:layout_constraintWidth_percent="0.3"
            tools:ignore="TouchTargetSizeCheck" />


        <TextView
            android:id="@+id/output8"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginTop="5dp"
            android:background="@drawable/translucent_background"
            android:enabled="true"
            android:focusable="true"
            android:gravity="center"
            android:longClickable="true"
            android:text="@string/output8"
            android:textIsSelectable="true"
            android:textSize="15sp"
            android:textStyle="bold"
            android:textColor="@color/text_color"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHeight_percent="0.03"
            app:layout_constraintHorizontal_bias="0.35"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/shortCode_input"
            app:layout_constraintVertical_bias="0.0"
            app:layout_constraintWidth_percent="0.25"
            tools:ignore="TouchTargetSizeCheck" />

        <TextView
            android:id="@+id/output3"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:background="@drawable/translucent_background"
            android:enabled="true"
            android:focusable="true"
            android:gravity="center"
            android:longClickable="true"
            android:text="@string/output3"
            android:textIsSelectable="true"
            android:textSize="15sp"
            android:textStyle="bold"
            android:textColor="@color/text_color"
            app:layout_constraintBottom_toBottomOf="@+id/output8"
            app:layout_constraintStart_toStartOf="@+id/output2"
            app:layout_constraintTop_toTopOf="@+id/shortCode_input"
            tools:ignore="SpeakableTextPresentCheck" />


        <Button
            android:id="@+id/send_button"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:text="@string/send_button_text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHeight_percent="0.04"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintWidth_percent="0.5"
            app:layout_constraintTop_toBottomOf="@+id/snr"
            tools:ignore="TouchTargetSizeCheck" />


        <Button
            android:id="@+id/start_half_duplex"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:text="@string/start_half_duplex"
            app:layout_constraintBottom_toTopOf="@+id/output1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.3"
            tools:ignore="TouchTargetSizeCheck" />


        <TextView
            android:id="@+id/snr"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginTop="5dp"
            android:background="@drawable/translucent_background"
            android:enabled="true"
            android:focusable="true"
            android:gravity="center"
            android:longClickable="true"
            android:text="信噪比"
            android:textIsSelectable="true"
            android:textSize="13sp"
            android:textStyle="bold"
            android:textColor="@color/text_color"
            app:layout_constraintHeight_percent="0.03"
            app:layout_constraintEnd_toStartOf="@+id/snr_spinner"
            app:layout_constraintStart_toStartOf="@+id/output3"
            app:layout_constraintTop_toBottomOf="@+id/output8" />

        <Spinner
            android:id="@+id/snr_spinner"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginTop="5dp"
            android:background="@drawable/spinner_background"
            android:popupBackground="@drawable/translucent"
            android:textStyle="bold"
            android:spinnerMode="dropdown"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.85"
            app:layout_constraintHeight_percent="0.03"
            app:layout_constraintWidth_percent="0.40"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/shortCode_speed_input"
            tools:ignore="MissingConstraints" />


    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.core.widget.NestedScrollView>

